# scrutin

./: App.js  README.md  dune  dune-project  package-lock.json  package.json  scrutin.opam
i18n/: en.json  fr.json  nb_NO.json
src/: dune
src/components/: ContactIndex.res  ElectionBooth.res  ElectionInfos.res  ElectionInvite.res  ElectionInviteEmail.res  ElectionInviteEmailItem.res  ElectionInviteManage.res  ElectionSearch.res  ElectionShowChoices.res  ElectionShowInProgress.res  EventIndex.res  HomeView.res  IdentityIndex.res  IdentityShow.res  SettingsView.res  TrusteeIndex.res
src/helpers/: S.res
